[metadata]
name = webmeter
author = Rafa Chen
author_email = laoqi1988_f1@126.com
summary = web tool base on jmeter
license = MIT
home_page = https://github.com/rafa0128/webmeter
description_file = README.md
classifier =
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3

[entry_points]
console_scripts =
    solox = webmeter.__main__:main